--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "mongoose": "^5.2.1",
     "morgan": "^1.9.0",
     "node-schedule": "^1.3.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1"
   },
   "author": "praveen",
   "licence": "ISC",
